--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "sfu-prerequisites-parsing",
   "private": true,
   "scripts": {
-    "parse": "bun run code/ask_llm.ts",
-    "fetch-data": "bun run code/get.ts",
-    "gen-links": "bun run code/make_links.ts"
+    "parse": "bun run code/parse.ts",
+    "initialize": "bun run code/get.ts",
+    "export": "bun run code/make_links.ts",
+    "stats": "bun run code/statistics.ts"
   },
   "devDependencies": {
     "@types/bun": "latest"
